--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="{{ '/assets/css/ie.css' | relative_url }}">
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <link rel="icon" href="https://kugge.github.io/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
   </head>
   <body>
